--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>Document</title>
 </head>
 <body id="toop">
-    <a href="#toop"><img class="top" src="/coffee/img/Aesthetic-Arrow-PNG-HD-removebg-preview.png" alt=""></a>
+    <a href="#toop"><img class="top" src="coffee/img/Aesthetic-Arrow-PNG-HD-removebg-preview.png" alt=""></a>
     <nav>
         <h1><span>C</span>offee</h1>
-            <a class="hed" rel="stylesheet" href="/coffee/h/home.html">Home</a>
-            <a class="hed" rel="stylesheet" href="/coffee/h/about.html">About</a>
-            <a class="hed" rel="stylesheet" href="/coffee/h/numbers.html">Numbers</a>
-            <a class="hed" rel="stylesheet" href="/coffee/h/contact.html">Contact</a>
+            <a class="hed" rel="stylesheet" href="coffee/h/home.html">Home</a>
+            <a class="hed" rel="stylesheet" href="coffee/h/about.html">About</a>
+            <a class="hed" rel="stylesheet" href="coffee/h/numbers.html">Numbers</a>
+            <a class="hed" rel="stylesheet" href="coffee/h/contact.html">Contact</a>
     </nav>
     <br>
     <br>
@@ -22,7 +22,7 @@
     <div class="center">
         <div class="card">
             <h3 style="margin:1em;">House Blend Coffee</h3>
-                    <img src="/coffee/img/house-blend.jpeg" width="300" style="margin:1em;">
+                    <img src="coffee/img/house-blend.jpeg" width="300" style="margin:1em;">
                     <p>
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi quisquam illo similique fugit earum delectus, eaque, deserunt impeditt Lorem ipsum dolor sit amet consectetur adipisicing elit!.
                     </p>
