--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/coffee/h/home.css">
+    <link rel="stylesheet" href="coffee/h/home.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body id="toop">
-    <a href="#toop"><img class="top" src="coffee/img/Aesthetic-Arrow-PNG-HD-removebg-preview.png" alt=""></a>
+    <a href="#toop"><img class="top" src="img/Aesthetic-Arrow-PNG-HD-removebg-preview.png" alt=""></a>
     <nav>
         <h1><span>C</span>offee</h1>
             <a class="hed" rel="stylesheet" href="coffee/h/home.html">Home</a>
